show_ip.css
.show_left {
    max-height: 31px;
    max-width: 180px;
    padding: 2px 10px;
    margin: 5px;
    background: rgba(0, 0, 0, 0.5);
    color: #fff;
    text-align: center;
    font-size: 24px;
    line-height: 30px;
    border-radius: 4px;
    position: fixed;
    bottom: 0;
    left: 0;
    z-index: 999999;
    font-family:Corbel, 'American Typewriter';
}

.show_right {
    max-height: 31px;
    max-width: 180px;
    padding: 2px 10px;
    margin: 5px;
    background: rgba(0, 0, 0, 0.5);
    color: #fff;
    text-align: center;
    font-size: 24px;
    line-height: 30px;
    border-radius: 4px;
    position: fixed;
    bottom: 0;
    right: 0;
    z-index: 999999;
    font-family:Corbel, 'American Typewriter';
}

